gccida/c0/decode_rtx_const
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_rtx_const/src/varasm.c:4006:25: error: must use 'enum' tag to refer to type 'machine_mode'
void  decode_rtx_const( machine_mode mode, rtx x,  struct rtx_const *value) 
                        ^
                        enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_rtx_const/src/varasm.c:4014:12: error: expected expression
*( _OWORD *)&value->un.vechi[13] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_rtx_const/src/varasm.c:4014:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&value->un.vechi[13] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_rtx_const/src/varasm.c:4015:12: error: expected expression
*( _OWORD *)&value->un.vechi[11] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_rtx_const/src/varasm.c:4015:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&value->un.vechi[11] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_rtx_const/src/varasm.c:4016:12: error: expected expression
*( _OWORD *)&value->un.vechi[9] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_rtx_const/src/varasm.c:4016:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&value->un.vechi[9] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_rtx_const/src/varasm.c:4017:12: error: expected expression
*( _OWORD *)&value->un.vechi[7] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_rtx_const/src/varasm.c:4017:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&value->un.vechi[7] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_rtx_const/src/varasm.c:4018:12: error: expected expression
*( _OWORD *)&value->un.vechi[5] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_rtx_const/src/varasm.c:4018:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&value->un.vechi[5] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_rtx_const/src/varasm.c:4019:12: error: expected expression
*( _OWORD *)&value->un.vechi[3] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_rtx_const/src/varasm.c:4019:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&value->un.vechi[3] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_rtx_const/src/varasm.c:4020:12: error: expected expression
*( _OWORD *)&value->un.vechi[1] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_rtx_const/src/varasm.c:4020:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&value->un.vechi[1] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_rtx_const/src/varasm.c:4021:12: error: expected expression
*( _OWORD *)value = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_rtx_const/src/varasm.c:4021:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)value = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_rtx_const/src/varasm.c:4036:33: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
value->un.du.d.r[2] = ( __int64)x[2]; 
                                ^~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_rtx_const/src/varasm.c:4040:33: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
value->un.du.d.r[1] = ( __int64)x[1]; 
                                ^~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_rtx_const/src/obj/varasm.o] Error 1
